fix - style - wrap to host

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,32 +1,36 @@
 @import "./color-variables";
-.main {
-  padding: 40px 80px;
-  background-color: $background;
-  display: flex;
-  flex-direction: column;
-  height: -webkit-fill-available;
-  min-height: 0;
-}
-
-.header {
-  font-size: 3em;
-  line-height: 80px;
-  text-decoration-line: underline;
-  text-decoration-color: $accent-primary;
-  color: $shopify-green-primary;
-}
-
-.results-output {
-  display: flex;
-  flex-direction: row;
+:host {
+  .main {
+    padding: 40px 80px;
+    background-color: $background;
+    display: flex;
+    flex-direction: column;
+    height: -webkit-fill-available;
+    min-height: 0;
+  }
+  
+  .header {
+    font-size: 3em;
+    line-height: 80px;
+    text-decoration-line: underline;
+    text-decoration-color: $accent-primary;
+    color: $shopify-green-primary;
+  }
+  
+  .results-output {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 @media screen and (max-width: 1020px) {
-  .main {
-    padding: 10px 20px;
+  :host {
+    .main {
+      padding: 10px 20px;
+    }
+  
+    .results-output {
+      flex-direction: column-reverse;
+    }  
   }
-
-  .results-output {
-    flex-direction: column-reverse;
-  }  
 }
